--- a/TestExecutive.csproj
+++ b/TestExecutive.csproj
@@ -46,7 +46,9 @@
     <Compile Include="Logging\SerialNumberDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Logging\SerialNumberDialog.Designer.cs" />
+    <Compile Include="Logging\SerialNumberDialog.Designer.cs">
+      <DependentUpon>SerialNumberDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Processes\ProcessExternal.cs" />
     <Compile Include="SCPI_VISA_Instruments\ConfigSCPI_VISA_Instruments.cs" />
     <Compile Include="SCPI_VISA_Instruments\PS_E3610xB.cs" />
