--- a/TestExecutive.csproj
+++ b/TestExecutive.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>TestExecutive</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <Deterministic>false</Deterministic>
+    <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
